# 2026LAB_1

./: AGENTS.md  LIMITS.md  README.md  RUNBOOK.md  db_collect_cli_spec.md  db_connection_policy.md  db_schema.schema.json  db_schema.spec.md  oracle_collection_scope.md  oracle_metadata_sql_spec.md  pyproject.toml  status.md
artifacts/: features.json  ir_merged.json
artifacts/e2e-llm-off/run1/: changed_files.json  run_context.json
artifacts/e2e-llm-off/run2/: changed_files.json  quality_gate_report.json  run_context.json
artifacts/e2e-llm-off/run3/: API.md  changed_files.json  (+2 more)
docs/: API.md  CHANGED_FILES_SCHEMA.md  CLI.md  CONTROLLER_DETECTION_FIXTURE_CASES.md  DB_SCHEMA.md  DB_SCHEMA_JSON_SCHEMA.md  DIFF_FAILURE_CONTRACT.md  EGOVFRAME_CONTROLLER_DETECTION_RULES.md  FEATURES_SCHEMA.md  INCLUDE_EXCLUDE_RULES.md  IR_MERGED_MERGE_RULES.md  PATH_NORMALIZATION.md  QUALITY_RULES.md  README.md  REPO_META_SCHEMA.md  REPRODUCIBILITY_VERIFICATION.md  RUN_CONTEXT_SCHEMA.md  SPEC.md  SPRING_BOOT_CONTROLLER_DETECTION_RULES.md  STRUCTURE.md  VALIDATION_TEST_SCENARIOS.md
fixtures/controller_detection/: endpoints.fixture.json  golden_snapshots.json  quality_gate_report.json
share_pack_mid/: README.md
src/lab/: __main__.py  cli.py  cli_markdown.py  cli_w4.py  controller_detection.py  exit_codes.py  markdown_renderer.py  shared_utils.py  w4_artifacts.py
tests/: test_fingerprint.py  test_reproducibility.py  test_w2_artifacts.py  test_w3_controller_detection.py  test_w3_quality_gate.py  test_w4_artifacts.py  test_w4_docs_and_quality.py  test_w6_db_schema_smoke.py
(+22 files in other folders)
