[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lab"
version = "0.1.0"
description = "LAB CLI for deterministic analysis artifacts"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
lab = "lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
